# mltop

./: Cargo.toml  LICENSE  README.md  dist-workspace.toml
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: theme.md
examples/: nvidia_check.rs
src/: app.rs  color.rs  config.rs  constants.rs  cpu.rs  data.rs  display.rs  display_data.rs  display_manager.rs  event.rs  lib.rs  main.rs  memory.rs  message_bus.rs  processes.rs  state.rs  system.rs  tui.rs  utils.rs  widgets.rs
src/config/: colors.rs  mod.rs  theme.rs
src/data/: collector.rs  component.rs  cpu.rs  data.rs  gpu.rs  memory.rs  mod.rs  models.rs  processes.rs  snapshot.rs  store.rs  system.rs  system_data.rs  terminal.rs  update_kind.rs
src/data/components/: cpu.rs  gpu.rs  memory.rs  processes.rs
src/data/models/: gpu.rs  memory.rs  processes.rs
src/devices/: cpu.rs  gpu.rs  memory.rs
src/widgets/: action_bar.rs  cpu.rs  gpu.rs  line_graph.rs  memory.rs  mod.rs  percentage_bar.rs  process_table.rs  processes.rs  state.rs  table_of_processes.rs
src/widgets/state/: process_table.rs
tests/: test_large.rs
