[package]
name = "mltop"
version = "0.4.0"
description = "Resource monitor for ML engineers written in Rust"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/kikefdezl/mltop"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.28.1"
itertools = "0.14.0"
nvml-wrapper = "0.10.0"
ratatui = "0.29.0"
sysinfo = { version = "0.30.12", default-features = false }

[profile.release]
codegen-units = 1
lto = true
