[package]
name = "mltop"
version = "0.6.3"
description = "Resource monitor for ML engineers written in Rust"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/kikefdezl/mltop"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.29.0"
itertools = "0.14.0"
nvml-wrapper = "0.11.0"
ratatui = { version = "0.30.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
sysinfo = { version = "0.37.2", default-features = false, features = ["system", "component"] }
toml = "0.9.11"

[profile.release]
codegen-units = 1
lto = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "fat"
codegen-units= 1



